--- a/dj5/templates/flatpages/community.html
+++ b/dj5/templates/flatpages/community.html
@@ -24,7 +24,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="admin_user">Сообщество</a>
+                            <a class="nav-link" href="/community/">Ресурсы</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contacts/">Контакты</a>
@@ -42,7 +42,7 @@
                 {% block content %}
                 {{ flatpage.content }}
                 {% endblock content %}
-                
+                {% include 'flatpages/urlesp.html' %}   
 здесь должен был бы быть форум вроде php_bb
             
             </div>
