--- a/dj5/templates/flatpages/index.html
+++ b/dj5/templates/flatpages/index.html
@@ -12,7 +12,7 @@
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
-        <body background={% templates 'captures/images.gif'>
+        
 
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
@@ -26,7 +26,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/community/">Сообщество</a>
+                            <a class="nav-link" href="/community/">Ресурсы</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contacts/">Контакты</a>
