--- a/dj5/templates/flatpages/default.html
+++ b/dj5/templates/flatpages/default.html
@@ -26,7 +26,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/community/">Сообщество</a>
+                            <a class="nav-link" href="/community/">Ресурсы</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contacts/">Контакты</a>
